@@ -1,5 +1,8 @@
 2001-08-11  Martin Baulig  <baulig@suse.de>
 
+	* launcher.c Ported to GTK+ 2.0, but `#ifdef FIXME' large parts
+	of this file.
+
 	* menu-properties.[ch]: #ifdef FIXME some stuff.
 
 	* scroll-menu.[ch]: Ported to GTK+ 2.0.
